Update style.css fixed contrast

--- a/04intro-css/style.css
+++ b/04intro-css/style.css
@@ -72,10 +72,10 @@ main dl {
 	background-color: #9e9e9e;
 }
 main dl dt {
-	color:#404040;
+	color:#1B402E;
 }
 main h2 {
-	color: #1B402E;
+	color:#1B402E;
 }
 main h3 {
 	color:#1B402E;
